force-app/main/default/objects/VTXY_ProviderNumber__c/VTXY_ProviderNumber__c.object-meta.xml
<CustomObject>
    <label>Provider Number</label>
    <nameField>
        <label>Provider Number Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>