force-app/main/default/objects/VTXY_ProviderNumber__c/fields/Assigned_User_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User_External_Id__c</fullName>
    <label>Assigned_User_External_Id</label>
    <type>Email</type>
</CustomField>