force-app/main/default/objects/VTXY_ProviderNumber__c/fields/Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Capabilities__c</fullName>
    <label>Capabilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Recording</fullName>
            </value>
            <value>
                <fullName>Broadcast.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>