force-app/main/default/objects/VTXY_ProviderNumber__c/fields/Capabilities_JSON__c.field-meta.xml
<CustomField>
    <fullName>Capabilities_JSON__c</fullName>
    <description>Voice/SMS/etc capabilities</description>
    <label>Capabilities JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>