force-app/main/default/objects/VTXY_ProviderNumber__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country_Code</label>
    <length>23</length>
    <type>Text</type>
</CustomField>