force-app/main/default/objects/VTXY_ProviderNumber__c/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <description>Feature end</description>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>