force-app/main/default/objects/VTXY_ProviderNumber__c/fields/Provider_License__c.field-meta.xml
<CustomField>
    <fullName>Provider_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider License</label>
    <referenceTo>VTXY_ProviderLicense__c</referenceTo>
    <relationshipLabel>ProviderNumbers</relationshipLabel>
    <relationshipName>ProviderNumbers</relationshipName>
    <type>Lookup</type>
</CustomField>