force-app/main/default/objects/VTXY_ProviderNumber__c/fields/Provider_Number_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Number_Id__c</fullName>
    <description>Provider ID</description>
    <label>Provider Number Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>