force-app/main/default/objects/VTXY_ProviderNumber__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Inventory status</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AVAILABLE</fullName>
            </value>
            <value>
                <fullName>RESERVED</fullName>
            </value>
            <value>
                <fullName>ASSIGNED</fullName>
            </value>
            <value>
                <fullName>DISABLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>