force-app/main/default/objects/VTXY_ProviderNumber__c/fields/Subscriber_Org__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscriber Org</label>
    <referenceTo>VTXY_SubscriberOrg__c</referenceTo>
    <relationshipLabel>Provider Numbers</relationshipLabel>
    <relationshipName>Provider_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>